# sentinelds

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LICENSE  PLAN.md  README.md  SECURITY.md  deploy_a2a_feature.sh  deploy_a2a_modeling.sh  deploy_a2a_orchestrator.sh  deploy_a2a_research.sh  deploy_orchestrator.sh  deploy_research_agent.py  deploy_sentinel_service.sh  features.csv  pyproject.toml  requirements.txt
.agents/agents/karpathy_agent/: AGENT.md  agent.json
.antigravitycli/plugins/sentinelds-guidelines/: plugin.json
.github/: pull_request_template.md
.github/workflows/: deploy-pages.yml  discord_notifications.yml  ruff.yml  type_check.yml
docs/: agents-exploit-scenarios.md  ai-security-threat-modelling.md  dynatrace-mcp-notes.md  dynatrace-mcp-options.md  migration_plan.md  orchestrator.md  styles.css
landing/: .firebaserc  README.md  firebase.json  index.html  package-lock.json  package.json
landing/.firebase/: hosting.ZGlzdA.cache
landing/src/: App.jsx  constants.js  main.jsx
landing/src/components/: AttacksDemo.css  AttacksDemo.jsx  Header.css  Header.jsx  Hero.css  Hero.jsx  HowItWorks.css  HowItWorks.jsx  Team.css  Team.jsx  TechStack.css  TechStack.jsx
landing/src/styles/: global.css
src/: __init__.py  collector-config.yaml  dynatrace_smoke_test.py  smoke-test-span.json  verify_smoke_test.py
src/a2a_agents/a2a_feature/: .dockerignore  Dockerfile  agent.py  main.py  requirements.txt
src/a2a_agents/a2a_modeling/: .dockerignore  Dockerfile  agent.py  main.py  requirements.txt
src/a2a_agents/a2a_orchestrator/: Dockerfile  main.py
src/a2a_agents/a2a_research/: .dockerignore  Dockerfile  agent.py  main.py  requirements.txt
src/agents/: __init__.py  agent.py  single_agent.py
src/agents/sub_agents/: __init__.py
src/attack_server/: .dockerignore  Dockerfile  README.md  generate_datasets.py  server.py
src/core/: __init__.py  config.py  gcs.py  genai_compat.py  model_list.py  models.py  sentinel_audit.py
src/dashboard/: app.js  chat.html  chat.js  data.js  index.html  styles.css
src/e2e/: run_demo.py
src/observability/: __init__.py  instrumentation.py  otel.py  tools.py
src/ref/: single_agent.py
src/scripts/: demo_a2_accuracy.py  manage_quarantine.py  seed_baseline.py  seed_demo_telemetry.py  spike_gcs_test.py
src/scripts/baseline_snapshots/: poisoned_run.json  run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
src/sentinel/: __init__.py  dynatrace_mcp.py  injection_detector.py  preflight.py  session.py
src/sentinel_service/: Dockerfile  README.md  __init__.py  heartbeat.py  main.py
src/smoke/: __init__.py  collector-config.yaml  diagnose_event_dql.py  dynatrace_direct_smoke_test.py  dynatrace_smoke_test.py  observer_smoke.py  sentinel_mcp_smoke.py  sentinel_remote_mcp_smoke.py  smoke-test-span.json  verify_smoke_test.py
src/tools/: __init__.py  dataset_discovery.py  feature_tools.py  file_creation_tools.py  modeling_tools.py  web_fetch.py
tests/: test_a1_detection_e2e.py  test_a1_negative_tests.py  test_a2_negative_tests.py  test_a2_poisoning_impact.py  test_feature_agent.py  test_feature_tools_gcs.py  test_genai_compat.py  test_injection_detector.py  test_modeling_tools.py  test_observer_flow.py  test_preflight.py  test_sentinel_audit.py  test_sentinel_mcp.py  test_sentinel_service.py  test_sentinel_session.py  test_web_fetch.py
(+10 files in other folders)
