[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinelds"
version = "0.1.0"
description = "An agentic data-science workspace defended by Dynatrace."
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "google-adk[a2a]>=1.28.1",
    "google-genai>=1.75.0",
    "mcp>=1.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-instrumentation-google-genai>=0.7b1",
    "opentelemetry-sdk>=1.0",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "scikit-learn>=1.0",
    "traceloop-sdk>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "google-cloud-storage>=2.16",
    "joblib>=1.3",
    "optuna>=3.5.0",
    "shap>=0.44.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true
exclude = [
    ".venv",
]
